<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->
    <!--<item-->
    <!--android:id="@+id/nav_camera"-->
    <!--android:icon="@drawable/ic_menu_camera"-->
    <!--android:title="Import" />-->
    <!--<item-->
    <!--android:id="@+id/nav_gallery"-->
    <!--android:icon="@drawable/ic_menu_gallery"-->
    <!--android:title="Gallery" />-->
    <!--<item-->
    <!--android:id="@+id/nav_slideshow"-->
    <!--android:icon="@drawable/ic_menu_slideshow"-->
    <!--android:title="Slideshow" />-->
    <!--<item-->
    <!--android:id="@+id/nav_manage"-->
    <!--android:icon="@drawable/ic_menu_manage"-->
    <!--android:title="Tools" />-->
    <!--</group>-->


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />

            <item
                android:id="@+id/menu_1"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_1" />

            <item
                android:id="@+id/menu_2"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_2" />

            <item
                android:id="@+id/menu_3"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_3" />

            <item
                android:id="@+id/menu_4"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_4" />

            <item
                android:id="@+id/menu_5"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_5" />

            <item
                android:id="@+id/menu_6"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_6" />

            <item
                android:id="@+id/menu_7"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_7" />

            <item
                android:id="@+id/menu_8"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_8" />
        </menu>
    </item>

</menu>
